--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>404 Page not found &middot; Hello, My Name is Chase Fortner!</title>
+  <title>404 Page not found &middot; Chase Fortner</title>
   <meta name="description" content="" />
 
   
@@ -28,12 +28,12 @@
 </head>
 
   <body class=" ">
-  <aside class="sidebar">
+  <aside class="sidebar to-top">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://localhost:1313/"><h1>Hello, My Name is Chase Fortner!</h1></a>
+      <a href="http://localhost:1313/"><h1>Chase Fortner</h1></a>
       <p class="lead">
-       I am a Software Engineer 
+       An aspiring Data Scientist 
       </p>
     </div>
 
