final commit for turn in

--- a/content/pages/Update.html
+++ b/content/pages/Update.html
@@ -13,3 +13,14 @@ draft: true
         <p>More details to come as my profile is reviewed for release!
             </p>
 </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Information</title>
+</head>
+<body>
+    <section id="contact-info">
+        <h1>Contact Information</h1>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/chase-fortner-44b39a5a/" target="_blank">LinkedIn</a> or check out my projects on <a href="https://github.com/TheFoxForever/website" target="_blank">GitHub</a>.</p>
+    </section>
+</body>
